# Modular2

./: .gitignore  CMakeLists.txt  MACRO_GUIDE.md  Macro_REF_Fat_Homogeneous_ROOT.mac  Makefile  PROYECTO_COMPLETO.md  README.md  README_old.md  REPORTE_FINAL_BRAQUITERAPIA.txt  VIS.mac  VISUALIZATION_GUIDE.md  analisis_comparativo_root.py  clean_workspace.sh  corrected_vis.mac  demo_visual.sh  generate_improved_maps.py  main.cc  primary.root  quick_vis.sh  run_clean_edep.sh  run_gui.sh  run_hdr.sh  run_simulation.sh  run_visualization.sh  simple_vis.mac  summary_improvements.py  test_corrected_classification.mac  test_heterogeneous.mac  test_heterogeneous_full.mac  vis_heterogeneous.mac
.github/: copilot-instructions.md
analysis/: analyze_results.py  comparison_three_materials.py  create_progress_summary.py  geometry_optimization_analysis.py  phantom_proportion_analysis.py  safe_distance_analysis.py  simple_comparison.py
archive_old_analysis_scripts/: ANALISIS.py  AnalisisRoot.py  analisis_diferencias_dosimétricas.py  analisis_escalas_consistentes.py  comparacion_directa_hueso.py  comparacion_rapida_optimizada.py  comparacion_referencia_final.py  compare_heterogeneity.py  convert_to_root_output.py  corregir_coordenadas.py  mapas_2d_CORREGIDOS.py  mapas_2d_FINALES.py  mapas_2d_comparacion.py  mapas_corregidos_final.py  mapas_detallados_edep.py  resumen_final_completo.py  setup_unique_root_files.py  visualize_data.py  visualize_full_coverage.py
archive_old_ascii_files/: EnergyDeposition_REF_Bone_Heterogeneous.out  EnergyDeposition_REF_Bone_Heterogeneous10M.out  EnergyDeposition_REF_Bone_Heterogeneous_CORREGIDO.out  EnergyDeposition_REF_Water_Homogeneous.out  EnergyDeposition_REF_Water_Homogeneous10M.out  EnergyDeposition_REF_Water_Homogeneous_CORREGIDO.out  brachytherapy_water_homogeneous.root  primary.root
archive_old_results/: ANALISIS.py.backup_20250909_152734  CMakeCache.txt  FlexiSourceMacro.mac.backup_20250909_152734  IodineSourceMacro.mac.backup_20250909_152734  LeipzigSourceMacro.mac.backup_20250909_152734  Macro_REF_Bone_Heterogeneous.mac.backup_20250909_152734  Macro_REF_Bone_Heterogeneous_ROOT.mac.backup_20250909_152734  Macro_REF_Water_Homogeneous.mac.backup_20250909_152734  Macro_REF_Water_Homogeneous_ROOT.mac.backup_20250909_152734  OncuraIodineSourceMacro.mac.backup_20250909_152734  analysis_summary.txt  energy_analysis_results.txt  test_mesh_config.mac.backup_20250909_152734
docs/: CONFIGURACION_REAL_VALIDADA.md  CONFIGURACION_SEGURA_OPTIMIZADA.md  README_ESTRUCTURA.md
include/: ActionInitialization.hh  BrachyDetectorConstruction.hh  BrachyDetectorMessenger.hh  BrachyRunAction.hh  BrachySteppingAction.hh  DetectorConstruction.hh  DoseScorer.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
macros/: CubosConcentricosMacro.mac  FlexiSourceMacro.mac  FlexiSourceMacro_OPTIMIZED_Bone.mac  FlexiSourceMacro_OPTIMIZED_Bone.mac.backup_20250909_152734  FlexiSourceMacro_OPTIMIZED_EQUILIBRATED_Bone.mac  FlexiSourceMacro_OPTIMIZED_EQUILIBRATED_Bone.mac.backup_20250909_152734  FlexiSourceMacro_OPTIMIZED_EQUILIBRATED_Fat.mac  FlexiSourceMacro_OPTIMIZED_EQUILIBRATED_Fat.mac.backup_20250909_152734  FlexiSourceMacro_OPTIMIZED_Fat.mac  FlexiSourceMacro_OPTIMIZED_Fat.mac.backup_20250909_152734  FlexiSourceMacro_OPTIMIZED_Water.mac  FlexiSourceMacro_OPTIMIZED_Water.mac.backup_20250909_152734  FlexiSourceMacro_REAL_Bone.mac  FlexiSourceMacro_REAL_Bone.mac.backup_20250909_152734  FlexiSourceMacro_REAL_Fat.mac  FlexiSourceMacro_REAL_Fat.mac.backup_20250909_152734  FlexiSourceMacro_REAL_Water.mac  FlexiSourceMacro_REAL_Water.mac.backup_20250909_152734  FlexiSourceMacro_SAFE_Water.mac  FlexiSourceMacro_SAFE_Water.mac.backup_20250909_152734  HeterogeneityMacro.mac  IodineSourceMacro.mac  LeipzigSourceMacro.mac  OncuraIodineSourceMacro.mac  TG186SourceMacro.mac  TG186SourceMacro.mac.backup_20250909_152734  batch_tg43.mac  clinical_gyn.mac  comparative_study.mac  demo_heterogeneous.mac  demo_visual.mac  heterogeneity_study.mac  heterogeneity_test.mac  heterogeneity_test.mac.backup_20250909_152734  heterogeneous_full.mac  init_vis.mac  quick_test.mac  (+15 more)
(+34 files in other folders)
